# HOLON-ETM

./: .gitignore  README.md  pyproject.toml
config/: config.yml  etm_national_kpis_holon_inputs.yml  etm_national_kpis_holon_inputs_and_results.yml  poc.yml  scaling_factors.yml
etinput/converters/: divide_by.py
scripts/: get_etm_results.py  send_holon_results.py  update_etm_input.py
src/etm_service/: __init__.py  action.py  balancer.py  batch.py  batches.py  combiner.py  config.py  curve.py  data_requests.py  node_property.py  value.py
src/etm_service/converters/: base.py  divide_by.py  multiply.py  with_two_values.py
src/etm_service/etm_session/: __init__.py  copy.py  curves.py  inputs.py  session.py
src/etm_service/single_request/: __init__.py  converter.py
tests/: conftest.py  test_balancer.py  test_batch.py  test_batches.py  test_combiner.py  test_data_requests.py  test_etm_session.py  test_single_request.py  test_value.py
tests/fixtures/: anylogic_result_curve.json  etm_service_config.yml  etm_service_dict.json  scaling_factors.yml  scaling_factors_dict.py
